# rust-template

./: Cargo.toml  README.md  cargo-generate.toml  klave.json
apps/rust-template/: Cargo.toml
apps/rust-template/src/: bindings.rs  lib.rs
apps/rust-template/wit/: world.wit
apps/{{project-name}}/: Cargo.toml
apps/{{project-name}}/wit/: world.wit
attestation/: README.md  cargo-generate.toml
attestation/apps/{{project-name}}/: Cargo.toml
attestation/apps/{{project-name}}/src/: lib.rs
attestation/apps/{{project-name}}/wit/: world.wit
evm-json-rpc/: README.md  cargo-generate.toml  klave.json
evm-json-rpc/apps/{{project-name}}/: Cargo.toml
evm-json-rpc/apps/{{project-name}}/src/: eth.rs  lib.rs  solidity.rs  web3.rs
evm-json-rpc/apps/{{project-name}}/src/klave_networks/: http.rs  mod.rs  network.rs  networks.rs
evm-json-rpc/apps/{{project-name}}/wit/: world.wit
evm-light-client/: README.md  klave.json
evm-light-client/apps/{{project-name}}/: Cargo.toml
evm-light-client/apps/{{project-name}}/src/: http.rs  lib.rs  light_client.rs
evm-light-client/apps/{{project-name}}/src/consensus/src/: beacon.rs  bls.rs  compute.rs  config.rs  context.rs  errors.rs  fork.rs  merkle.rs  mod.rs  preset.rs  sync_protocol.rs  types.rs
evm-light-client/apps/{{project-name}}/src/consensus/src/config/: holesky.rs  mainnet.rs  minimal.rs  sepolia.rs
evm-light-client/apps/{{project-name}}/src/consensus/src/fork/: altair.rs  bellatrix.rs  capella.rs  deneb.rs  electra.rs
evm-light-client/apps/{{project-name}}/src/consensus/src/preset/: mainnet.rs  minimal.rs
evm-light-client/apps/{{project-name}}/src/klave_client/src/: client.rs  mod.rs  request.rs
evm-light-client/apps/{{project-name}}/src/klave_client/src/transport/https/: error.rs  mod.rs  transport.rs
evm-light-client/apps/{{project-name}}/src/light_client_cli/src/: chain.rs  cli.rs  client.rs  commands.rs  context.rs  db.rs  errors.rs  preset.rs  state.rs
evm-light-client/apps/{{project-name}}/src/light_client_cli/src/commands/: block.rs  header.rs  init.rs  persist.rs  update.rs
evm-light-client/apps/{{project-name}}/src/light_client_verifier/src/: consensus.rs  context.rs  errors.rs  execution.rs  misbehaviour.rs  mod.rs  state.rs  updates.rs
evm-light-client/apps/{{project-name}}/src/light_client_verifier/src/updates/: bellatrix.rs  capella.rs  deneb.rs
evm-light-client/apps/{{project-name}}/src/lodestar_rpc/src/: client.rs  errors.rs  types.rs
evm-light-client/apps/{{project-name}}/wit/: world.wit
evm-wallet/: Cargo.toml  README.md  klave.json
evm-wallet/apps/{{project-name}}/: Cargo.toml
evm-wallet/apps/{{project-name}}/contracts/: CrossChainToken.sol
evm-wallet/apps/{{project-name}}/src/: lib.rs  solidity.rs  wallet.rs
evm-wallet/apps/{{project-name}}/src/klave_networks/: http.rs  mod.rs  network.rs  networks.rs
evm-wallet/apps/{{project-name}}/wit/: world.wit
ledger/: README.md  cargo-generate.toml
ledger/apps/{{project-name}}/src/: lib.rs
ledger/apps/{{project-name}}/wit/: world.wit
musig2/: cargo-generate.toml  klave.json  pre-script.rhai
musig2/apps/{{project-name}}/: Cargo.toml
musig2/apps/{{project-name}}/src/: lib.rs  musig_agg.rs  musig_steps.rs  utils.rs  wallet.rs
musig2/apps/{{project-name}}/ui/: index.html
musig2/apps/{{project-name}}/ui/assets/: Combination-DgFmmm16.js  _id-DAorQMUO.js  _id-zQDAJgbH.js  _layout-BoL0L0QW.js  _layout-DkmvdDim.js  _layout-DrdO192a.js  badge-BUV8wAal.js  button-BHCxSF1w.js  card-BIydPbpJ.js  container-BO_8Kck5.js  createLucideIcon-D0MALnN9.js  index-BbTZgOPh.js  index-CBTJGF-J.css  index-CgtANSJj.js  input-CbBLWTh9.js  link-CrF86Kb2.js  route-D9ww_7TU.js  setup-CHUHiERx.js
musig2/apps/{{project-name}}/wit/: world.wit
postgre/: Cargo.toml  README.md  cargo-generate.toml  klave.json
postgre/apps/{{project-name}}/: Cargo.toml
postgre/apps/{{project-name}}/src/: bindings.rs  business.rs  crypto.rs  database.rs  lib.rs  utils.rs
postgre/apps/{{project-name}}/wit/: world.wit
postgre/sql-example/: feed_db.sql
postgre/sql-example/schemas/: products_schema.sql  purchases_schema.sql  users_schema.sql
sdk/wit/: sdk.wit
src/: lib.rs
templates/attestation/: cargo-generate.toml
templates/attestation/apps/{{project-name}}/src/: lib.rs
