[package]
name = "rust-template"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.24.0", features = ["bitflags"] }
serde_json = "1.0.117"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:rust-template"

[package.metadata.component.target.dependencies]
"klave:sdk" = { path = "../../sdk/wit" }
