[package]
name = "rust-template"
version = "0.0.1"
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.36.0", features = ["bitflags"] }
serde_json = "1.0.117"
component = "0.1.1"
klave = "0.1.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:rust-template"

[profile.release]
lto = true
# Tell `rustc` to optimize for small code size.
opt-level = "s"
strip = true
