[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2021"
description = "Ethereum Json-Rpc API to a number of networks"

[dependencies]
wit-bindgen-rt = { version = "0.36.0", features = ["bitflags"] }
component = "0.1.1"
num256 = "0.6.0"
base64 = "0.22.1"
engine = "0.0.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.117"
http = "1.2.0"
klave = "0.3.0"
getrandom = { version = "0.2", features = ["custom"] }
alloy-rlp = "0.3.11"
alloy-primitives = "0.8.21"
alloy-signer = "0.11.0"
alloy-rpc-types-eth = "0.11.0"
alloy-consensus = "0.11.0"
alloy-signer-local = "0.11.1"
alloy-network = "0.11.1"
alloy-eips = "0.11.1"
derive_more = { version = "1.0", features = ["display"] }
alloy-sol-types = "0.8.22"
alloy-json-abi = "0.8.22"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:{{component_name}}"
