[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.42.1", features = ["bitflags"] }
serde_json = "1.0.140"
klave = "0.4.0"
musig2 = {version = "0.2.4", default-features = false, features = ["secp256k1","serde"]}
serde = "1.0.218"
hex = "0.4.3"
sha2 = "0.10.8"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:{{component_name}}"

[profile.release]
lto = true
# Tell `rustc` to optimize for small code size.
opt-level = "s"
strip = true
